==> tannewt/circuitpython/ports/raspberrypi/supervisor/port.c <==
#include <stddef.h>
#include <string.h>
#include <stdlib.h>
#include "supervisor/background_callback.h"
#include "supervisor/board.h"
#include "supervisor/port.h"
#include "bindings/rp2pio/StateMachine.h"
#include "genhdr/mpversion.h"
#include "shared-bindings/busio/SPI.h"
#include "shared-bindings/countio/Counter.h"
#include "shared-bindings/microcontroller/__init__.h"
#include "shared-bindings/rtc/__init__.h"
#include "audio_dma.h"
#include "shared-module/ssl/__init__.h"
#include "common-hal/wifi/__init__.h"
#include "common-hal/rtc/RTC.h"
#include "common-hal/busio/UART.h"
#include "supervisor/shared/safe_mode.h"
#include "supervisor/shared/stack.h"
#include "supervisor/shared/tick.h"
#include "hardware/structs/watchdog.h"
#include "hardware/gpio.h"
#include "hardware/uart.h"
#include "hardware/sync.h"
#include "hardware/timer.h"
#include "py/mphal.h"
#include "pico/cyw43_arch.h"
#include "pico/time.h"
#include "pico/binary_info.h"
#include "pico/bootrom.h"
#include "hardware/watchdog.h"
#include "RP2350.h" // CMSIS
#include "hardware/gpio.h"
#include "hardware/sync.h"
#include "hardware/structs/ioqspi.h"
#include "hardware/structs/sio.h"
#include "supervisor/shared/serial.h"
#include "tusb.h"
#include <cmsis_compiler.h>
#include "lib/tlsf/tlsf.h"

safe_mode_t port_init(void) {
    _binary_info();
    // Set brown out.

    // Load from the XIP memory space that doesn't cache. That way we don't
    // evict anything else. The code we're loading is linked to the RAM address
    // anyway.
    #ifdef PICO_RP2040
    size_t nocache = 0x03000000;
    #endif
    #ifdef PICO_RP2350
    size_t nocache = 0x04000000;
    #endif

    // Copy all of the "tightly coupled memory" code and data to run from RAM.
    // This lets us use the 16k cache for dynamically used data and code.
    // We must do this before we try and call any of its code or load the data.
    uint32_t *itcm_flash_copy = (uint32_t *)(((size_t)&_ld_itcm_flash_copy) | nocache);
    for (uint32_t i = 0; i < ((size_t)&_ld_itcm_size) / 4; i++) {
        (&_ld_itcm_destination)[i] = itcm_flash_copy[i];
    }

    // Copy all of the data to run from DTCM.
    uint32_t *dtcm_flash_copy = (uint32_t *)(((size_t)&_ld_dtcm_data_flash_copy) | nocache);
    for (uint32_t i = 0; i < ((size_t)&_ld_dtcm_data_size) / 4; i++) {
        (&_ld_dtcm_data_destination)[i] = dtcm_flash_copy[i];
    }

    // Clear DTCM bss.
    for (uint32_t i = 0; i < ((size_t)&_ld_dtcm_bss_size) / 4; i++) {
        (&_ld_dtcm_bss_start)[i] = 0;
    }

    // Set up the critical section to protect the background task queue.
    critical_section_init(&background_queue_lock);

    #if CIRCUITPY_CYW43
    never_reset_pin_number(CYW43_DEFAULT_PIN_WL_REG_ON);
    never_reset_pin_number(CYW43_DEFAULT_PIN_WL_DATA_IN);
    never_reset_pin_number(CYW43_DEFAULT_PIN_WL_CS);
    never_reset_pin_number(CYW43_DEFAULT_PIN_WL_CLOCK);
    #endif

    // Reset everything into a known state before board_init.
    reset_port();

    // Initialize RTC
    #if CIRCUITPY_RTC
    common_hal_rtc_init();
    #endif

    // For the tick.
    hardware_alarm_claim(0);
    hardware_alarm_set_callback(0, _tick_callback);

    // RP2 port-specific early serial initialization for psram debug.
    // The RTC must already be initialized, otherwise the serial UART
    // will hang.
    serial_early_init();

    #ifdef CIRCUITPY_PSRAM_CHIP_SELECT
    setup_psram();
    #endif

    // Initialize heap early to allow for early allocation.
    _port_heap_init();

    // Check brownout.

    #if CIRCUITPY_CYW43
    // A small number of samples of pico w need an additional delay before
    // initializing the cyw43 chip. Delays inside cyw43_arch_init_with_country
    // are intended to meet the power on timing requirements, but apparently
    // are inadequate. We'll back off this long delay based on future testing.
    mp_hal_delay_ms(CIRCUITPY_CYW43_INIT_DELAY);

    // Change this as a placeholder as to how to init with country code.
    // Default country code is CYW43_COUNTRY_WORLDWIDE)
    if (cyw43_arch_init_with_country(PICO_CYW43_ARCH_DEFAULT_COUNTRY_CODE)) {
        serial_write("WiFi init failed\n");
    } else {
        cyw_ever_init = true;
    }
    #endif
    if (board_requests_safe_mode()) {
        return SAFE_MODE_USER;
    }

    return SAFE_MODE_NONE;
}

void reset_port(void) {
    #if CIRCUITPY_BUSIO
    reset_spi();
    reset_uart();
    #endif

    #if CIRCUITPY_COUNTIO
    reset_countio();
    #endif

    #if CIRCUITPY_RP2PIO
    reset_rp2pio_statemachine();
    #endif

    #if CIRCUITPY_RTC
    rtc_reset();
    #endif

    #if CIRCUITPY_AUDIOCORE
    audio_dma_reset();
    #endif

    #if CIRCUITPY_SSL
    ssl_reset();
    #endif

    #if CIRCUITPY_WATCHDOG
    watchdog_reset();
    #endif

    #if CIRCUITPY_WIFI
    wifi_reset();
    #endif

    reset_all_pins();
}

void port_enable_tick(void) {
    ticks_enabled = true;
    hardware_alarm_set_target(0, delayed_by_us(get_absolute_time(), 977));
}

void port_interrupt_after_ticks(uint32_t ticks) {
    if (!ticks_enabled) {
        hardware_alarm_set_target(0, delayed_by_us(get_absolute_time(), ticks * 977));
    }
    _woken_up = false;
}

void port_idle_until_interrupt(void) {
    #ifdef PICO_RP2040
    common_hal_mcu_disable_interrupts();
    #if CIRCUITPY_USB_HOST
    if (!background_callback_pending() && !tud_task_event_ready() && !tuh_task_event_ready() && !_woken_up) {
    #else
    if (!background_callback_pending() && !tud_task_event_ready() && !_woken_up) {
        #endif
        __DSB();
        __WFI();
    }
    common_hal_mcu_enable_interrupts();
    #else
    // because we use interrupt priority, don't use
    // common_hal_mcu_disable_interrupts (because an interrupt masked by
    // BASEPRI will not occur)
    uint32_t state = save_and_disable_interrupts();

    // Ensure BASEPRI is at 0...
    uint32_t oldBasePri = __get_BASEPRI();
    __set_BASEPRI(0);
    __isb();
    #if CIRCUITPY_USB_HOST
    if (!background_callback_pending() && !tud_task_event_ready() && !tuh_task_event_ready() && !_woken_up) {
    #else
    if (!background_callback_pending() && !tud_task_event_ready() && !_woken_up) {
        #endif
        __DSB();
        __WFI();
    }

    // and restore basepri before reenabling interrupts
    __set_BASEPRI(oldBasePri);
    __isb();

    restore_interrupts(state);
    #endif
}

/**
 * \brief Default interrupt handler for unused IRQs.
 */
extern NORETURN void isr_hardfault(void); // provide a prototype to avoid a missing-prototypes diagnostic
__attribute__((used)) void __not_in_flash_func(isr_hardfault)(void) {
    // Only safe mode from core 0 which is running CircuitPython. Core 1 faulting
    // should not be fatal to CP. (Fingers crossed.)
    if (get_core_num() == 0) {
        reset_into_safe_mode(SAFE_MODE_HARD_FAULT);
    }
    while (true) {
        asm ("nop;");
    }
}

void port_yield() {
    #if CIRCUITPY_CYW43
    cyw43_arch_poll();
    #endif
}

void port_boot_info(void) {
    #if CIRCUITPY_CYW43
    mp_printf(&mp_plat_print, "MAC");
    for (int i = 0; i < 6; i++) {
        mp_printf(&mp_plat_print, ":%02X", cyw43_state.mac[i]);
    }
    mp_printf(&mp_plat_print, "\n");
    #endif
}

#if CIRCUITPY_BOOT_BUTTON_NO_GPIO
bool __no_inline_not_in_flash_func(port_boot_button_pressed)(void) {
    // Sense the state of the boot button. Because this function
    // disables flash, it cannot be safely called once the second
    // core has been started. When the BOOTSEL button is sensed as
    // pressed, return is delayed until the button is released and
    // a delay has passed in order to debounce the button.
    const uint32_t CS_PIN_INDEX = 1;
    #if defined(PICO_RP2040)
    const uint32_t CS_BIT = 1u << 1;
    #else
    const uint32_t CS_BIT = SIO_GPIO_HI_IN_QSPI_CSN_BITS;
    #endif
    uint32_t int_state = save_and_disable_interrupts();
    // Wait for any outstanding XIP activity to finish. Flash
    // must be quiescent before disabling the chip select. Since
    // there's no XIP busy indication we can test, we delay a
    // generous 5 ms to allow any XIP activity to finish.
    busy_wait_us(5000);
    // Float the flash chip select pin. The line will HI-Z due to
    // the external 10K pull-up resistor.
    hw_write_masked(&ioqspi_hw->io[CS_PIN_INDEX].ctrl,
        GPIO_OVERRIDE_LOW << IO_QSPI_GPIO_QSPI_SS_CTRL_OEOVER_LSB,
            IO_QSPI_GPIO_QSPI_SS_CTRL_OEOVER_BITS);
    // Delay 100 us to allow the CS line to stabilize. If BOOTSEL is
    // pressed, the line will be pulled low by the button and its
    // 1K external resistor to ground.
    busy_wait_us(100);
    bool button_pressed = !(sio_hw->gpio_hi_in & CS_BIT);
    // Wait for the button to be released.
    if (button_pressed) {
        while (!(sio_hw->gpio_hi_in & CS_BIT)) {
            tight_loop_contents();
        }
        // Wait for 50 ms to debounce the button.
        busy_wait_us(50000);
    }
    // Restore the flash chip select pin to its original state.
    hw_write_masked(&ioqspi_hw->io[CS_PIN_INDEX].ctrl,
        GPIO_OVERRIDE_NORMAL << IO_QSPI_GPIO_QSPI_SS_CTRL_OEOVER_LSB,
            IO_QSPI_GPIO_QSPI_SS_CTRL_OEOVER_BITS);
    // Delay 5 ms to allow the flash chip to re-enable and for the
    // flash CS pin to stabilize.
    busy_wait_us(5000);
    // Restore the interrupt state.
    restore_interrupts(int_state);
    return button_pressed;
}
#endif
